[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Nikita Vakula <programmistov.programmist@gmail.com>"]
readme = "README.md"
packages = [{include = "auth", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.94.0"}
pyotp = "^2.8.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
